[package]
name = "tree-sitter-easybuild"
description = "Parser for easybuild config files"
version = "0.1.0"
authors = ["Leon Boschman <leon.boschman@chalmers.se>"]
license = "GPL-2.0-or-later"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "easybuild"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/lboschman/tree-sitter-easybuild"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
