[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-easybuild"
description = "Parser for easybuild config files"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "easybuild"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Leon Boschman", email = "leon.boschman@chalmers.se" }]
requires-python = ">=3.10"
license.text = "GPL-2.0-or-later"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/lboschman/tree-sitter-easybuild"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
